Update with run from scratch

--- a/examples/KGTK Turorial.ipynb
+++ b/examples/KGTK Turorial.ipynb
@@ -218,9 +218,9 @@
      "text": [
       " 1102950184 7268641028 92319283374\n",
       "\n",
-      "real\t6m41.454s\n",
-      "user\t9m20.385s\n",
-      "sys\t1m18.015s\n"
+      "real\t6m47.261s\n",
+      "user\t9m26.569s\n",
+      "sys\t1m20.805s\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        1.08 real         0.58 user         0.19 sys\n",
+      "     9000.44 real     12706.29 user       868.10 sys\n",
       "id                           node1  label  node2     rank    node2;wikidatatype\n",
       "Q31-P1036-c4e1ad-df86eeb8-0  Q31    P1036  \"2--493\"  normal  external-id\n",
       "Q31-P1081-02c2ed-033524b0-0  Q31    P1081  +0.866    normal  quantity\n",
@@ -364,10 +364,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id              node1  label  node2\n",
+      "zcat: id              node1  label  node2\n",
       "P10-label-en    P10    label  'video'@en\n",
       "P1000-label-en  P1000  label  'record held'@en\n",
-      "zcat: P1001-label-en  P1001  label  'applies to jurisdiction'@en\n",
+      "P1001-label-en  P1001  label  'applies to jurisdiction'@en\n",
       "P1002-label-en  P1002  label  'engine configuration'@en\n",
       "P1003-label-en  P1003  label  'National Library of Romania ID'@en\n",
       "P1004-label-en  P1004  label  'MusicBrainz place ID'@en\n",
@@ -398,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.65 real         0.53 user         0.11 sys\n",
+      "     2614.34 real      2057.80 user       439.40 sys\n",
       "id                           node1  label  node2     label;label\n",
       "Q31-P1036-c4e1ad-df86eeb8-0  Q31    P1036  \"2--493\"  'Dewey Decimal Classification'@en\n",
       "Q31-P1081-02c2ed-033524b0-0  Q31    P1081  +0.866    'Human Development Index'@en\n",
@@ -437,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.66 real         0.52 user         0.12 sys\n",
+      "     3446.87 real      1717.24 user       726.35 sys\n",
       "id                            node1  label  node2      node2;label\n",
       "Q31-P35-Q1079522-c82ed584-0   Q31    P35    Q1079522   'Erasme Louis Surlet de Chokier'@en\n",
       "Q31-P35-Q12967-f2b9aaf3-0     Q31    P35    Q12967     'Leopold II of Belgium'@en\n",
@@ -476,7 +476,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.65 real         0.52 user         0.12 sys\n",
+      "     2884.70 real      3724.67 user       311.72 sys\n",
       "id                                         node1                        label  node2                     node2;wikidatatype\n",
       "Q31-P35-Q1079522-c82ed584-0-P39-Q477406-0  Q31-P35-Q1079522-c82ed584-0  P39    Q477406                   wikibase-item\n",
       "Q31-P35-Q1079522-c82ed584-0-P580-106076-0  Q31-P35-Q1079522-c82ed584-0  P580   ^1831-02-25T00:00:00Z/11  time\n",
@@ -507,7 +507,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.66 real         0.53 user         0.11 sys\n",
+      "      386.79 real       184.18 user        90.44 sys\n",
       "node1                        label  node2                     label;label\n",
       "Q31-P35-Q1079522-c82ed584-0  P39    Q477406                   'position held'@en\n",
       "Q31-P35-Q1079522-c82ed584-0  P580   ^1831-02-25T00:00:00Z/11  'start time'@en\n",
@@ -539,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.66 real         0.53 user         0.11 sys\n"
+      "        1.09 real         0.57 user         0.19 sys\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
       "Q31-P35-Q12971-2088471b-0                  Q31                          P35    Q12971\n",
       "Q31-P35-Q12971-2088471b-0-P39-Q13592862-0  Q31-P35-Q12971-2088471b-0    P39    Q13592862\n",
       "Q31-P35-Q12971-2088471b-0-P580-a35d41-0    Q31-P35-Q12971-2088471b-0    P580   ^1831-06-04T00:00:00Z/11\n",
-      "        1.41 real         2.01 user         0.51 sys\n"
+      "        1.51 real         2.04 user         0.50 sys\n"
      ]
     }
    ],
@@ -687,12 +687,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zcat: node1     label     node2     id\n",
+      "zcat: error writing to output: Broken pipe\n",
+      "node1     label     node2     id\n",
       "Q1000032  P279star  Q1000032  Q1000032-P279star-Q1000032-0000\n",
       "Q1000032  P279star  Q1150070  Q1000032-P279star-Q1150070-0000\n",
-      "error writing to outputQ1000032  P279star  Q1190554  Q1000032-P279star-Q1190554-0000\n",
-      ": Q1000032  P279star  Q133500   Q1000032-P279star-Q133500-0000\n",
-      "Broken pipe\n"
+      "Q1000032  P279star  Q1190554  Q1000032-P279star-Q1190554-0000\n",
+      "Q1000032  P279star  Q133500   Q1000032-P279star-Q133500-0000\n"
      ]
     }
    ],
@@ -716,7 +716,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        2.97 real         0.64 user         0.58 sys\n"
+      "      828.44 real      1081.90 user        56.98 sys\n"
      ]
     }
    ],
@@ -810,7 +810,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        2.14 real         0.81 user         0.37 sys\n"
+      "        2.55 real         0.86 user         0.44 sys\n"
      ]
     }
    ],
@@ -871,7 +871,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        2.61 real         0.76 user         0.47 sys\n"
+      "        2.60 real         0.78 user         0.46 sys\n"
      ]
     }
    ],
@@ -899,16 +899,16 @@
      "output_type": "stream",
      "text": [
       "id                                  node1      label  node2\n",
-      "Q1350656-P279-Q1007164-7e3ecba9-0   Q1350656   P279   Q1007164\n",
+      "zcat: Q1350656-P279-Q1007164-7e3ecba9-0   Q1350656   P279   Q1007164\n",
       "Q20713240-P279-Q1007164-b3112260-0  Q20713240  P279   Q1007164\n",
       "Q2535077-P279-Q1007164-b2d3684b-0   Q2535077   P279   Q1007164\n",
       "Q536976-P279-Q1007164-8bf7467b-0    Q536976    P279   Q1007164\n",
       "Q7991845-P279-Q1007164-18bc383a-0   Q7991845   P279   Q1007164\n",
-      "zcat: Q10337004-P186-Q10210-c56dd7ce-0    Q10337004  P186   Q10210\n",
+      "Q10337004-P186-Q10210-c56dd7ce-0    Q10337004  P186   Q10210\n",
       "Q10429117-P31-Q10210-d342f061-0     Q10429117  P31    Q10210\n",
-      "Q1051699-P279-Q10210-65d32c67-0     Q1051699   P279   Q10210\n",
-      "Q1058259-P279-Q10210-e204554a-0     Q1058259   P279   Q10210\n",
-      "error writing to output: Broken pipe\n"
+      "error writing to outputQ1051699-P279-Q10210-65d32c67-0     Q1051699   P279   Q10210\n",
+      ": Q1058259-P279-Q10210-e204554a-0     Q1058259   P279   Q10210\n",
+      "Broken pipe\n"
      ]
     }
    ],
@@ -932,7 +932,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.96 real         0.84 user         0.10 sys\n"
+      "        0.93 real         0.82 user         0.09 sys\n"
      ]
     }
    ],
@@ -984,7 +984,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        7.10 real         4.09 user         0.86 sys\n"
+      "        6.66 real         4.06 user         0.76 sys\n"
      ]
     }
    ],
@@ -1045,7 +1045,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        4.52 real         6.22 user         0.59 sys\n"
+      "        4.39 real         5.85 user         0.53 sys\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       17.12 real         9.54 user         1.92 sys\n"
+      "       14.95 real         9.13 user         1.52 sys\n"
      ]
     }
    ],
@@ -1183,7 +1183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        1.53 real         0.67 user         0.28 sys\n"
+      "       15.38 real        23.16 user         1.01 sys\n"
      ]
     }
    ],
@@ -1262,7 +1262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        4.52 real         6.01 user         0.61 sys\n"
+      "        4.25 real         5.72 user         0.55 sys\n"
      ]
     }
    ],
@@ -1319,7 +1319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        1.66 real         1.82 user         0.27 sys\n"
+      "        1.50 real         1.80 user         0.18 sys\n"
      ]
     }
    ],
@@ -1372,7 +1372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        1.05 real         0.68 user         0.19 sys\n"
+      "        0.96 real         0.64 user         0.17 sys\n"
      ]
     }
    ],
@@ -1432,7 +1432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        4.89 real         6.57 user         0.59 sys\n"
+      "        4.78 real         6.41 user         0.57 sys\n"
      ]
     }
    ],
@@ -1531,7 +1531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        5.16 real         2.56 user         0.89 sys\n"
+      "        3.71 real         2.48 user         0.54 sys\n"
      ]
     }
    ],
@@ -1555,13 +1555,13 @@
       "P10-label-en    P10    label  'video'@en\n",
       "P1001-label-en  P1001  label  'applies to jurisdiction'@en\n",
       "P1003-label-en  P1003  label  'National Library of Romania ID'@en\n",
-      "P1004-label-en  P1004  label  'MusicBrainz place ID'@en\n",
+      "zcat: P1004-label-en  P1004  label  'MusicBrainz place ID'@en\n",
       "P1005-label-en  P1005  label  'Portuguese National Library ID'@en\n",
       "P1006-label-en  P1006  label  'Nationale Thesaurus voor Auteurs ID'@en\n",
-      "P101-label-en   P101   label  'field of work'@en\n",
+      "error writing to output: P101-label-en   P101   label  'field of work'@en\n",
+      "Broken pipe\n",
       "P1014-label-en  P1014  label  'Getty AAT ID'@en\n",
-      "P1015-label-en  P1015  label  'NORAF ID'@en\n",
-      "zcat: error writing to output: Broken pipe\n"
+      "P1015-label-en  P1015  label  'NORAF ID'@en\n"
      ]
     }
    ],
@@ -1585,7 +1585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        8.77 real         1.09 user         1.81 sys\n"
+      "      301.05 real       134.43 user        76.26 sys\n"
      ]
     }
    ],
@@ -1612,7 +1612,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        2.79 real         1.27 user         0.46 sys\n"
+      "       45.52 real        69.38 user         2.48 sys\n"
      ]
     }
    ],
@@ -1632,7 +1632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        1.12 real         0.63 user         0.20 sys\n"
+      "       10.08 real         8.83 user         1.06 sys\n"
      ]
     }
    ],
@@ -1666,7 +1666,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        3.61 real         0.96 user         0.63 sys\n"
+      "      496.90 real       707.73 user        31.48 sys\n"
      ]
     }
    ],
@@ -1686,7 +1686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        8.43 real         0.99 user         1.71 sys\n"
+      "      147.28 real        79.67 user        40.48 sys\n"
      ]
     }
    ],
@@ -1729,7 +1729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0.92 real         0.55 user         0.17 sys\n",
+      "     2137.69 real       735.62 user       831.58 sys\n",
       "id                           node1  label  node2     rank       node2;wikidatatype  id                                         node1                        label  node2                    node2;wikidatatype\n",
       "Q65-P1082-02e70e-ea7734b4-0  Q65    P1082  +3792621  normal     quantity            Q65-P1082-02e70e-ea7734b4-0-P585-6e6a88-0  Q65-P1082-02e70e-ea7734b4-0  P585   ^2010-00-00T00:00:00Z/9  time\n",
       "Q65-P1082-2c08e1-12f0f95e-0  Q65    P1082  +5728     normal     quantity            Q65-P1082-2c08e1-12f0f95e-0-P585-4ab039-0  Q65-P1082-2c08e1-12f0f95e-0  P585   ^1870-00-00T00:00:00Z/9  time\n",
@@ -1776,7 +1776,7 @@
      "text": [
       "[Errno 2] No such file or directory: '/Users/pedroszekely/Downloads/kypher/{wos}/derived.P279.tsv.gz'\n",
       "\n",
-      "        0.66 real         0.53 user         0.12 sys\n"
+      "        1.10 real         0.59 user         0.20 sys\n"
      ]
     }
    ],
