--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -112,17 +112,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print("wikidata_input_path = %s" % repr(wikidata_input_path))\n",
-    "print("wikidata_parts_path = %s" % repr(wikidata_parts_path))\n",
-    "print("temp_folder_path = %s" % repr(temp_folder_path))\n",
-    "print("gzip_command = %s" % repr(gzip_command))\n",
-    "print("kgtk_command = %s" % repr(kgtk_command))\n",
-    "print("kgtk_options = %s" % repr(kgtk_options))\n",
-    "print("kgtk_extension = %s" % repr(kgtk_extension))\n",
-    "print("presorted = %s" % repr(presorted))\n",
-    "print("sort_extras = %s" % repr(sort_extras))\n",
-    "print("use_mgzip = %s" % repr(use_mgzip))\n",
-    "print("verbose = %s" % repr(verbose))\n",
+    "print('wikidata_input_path = %s' % repr(wikidata_input_path))\n",
+    "print('wikidata_parts_path = %s' % repr(wikidata_parts_path))\n",
+    "print('temp_folder_path = %s' % repr(temp_folder_path))\n",
+    "print('gzip_command = %s' % repr(gzip_command))\n",
+    "print('kgtk_command = %s' % repr(kgtk_command))\n",
+    "print('kgtk_options = %s' % repr(kgtk_options))\n",
+    "print('kgtk_extension = %s' % repr(kgtk_extension))\n",
+    "print('presorted = %s' % repr(presorted))\n",
+    "print('sort_extras = %s' % repr(sort_extras))\n",
+    "print('use_mgzip = %s' % repr(use_mgzip))\n",
+    "print('verbose = %s' % repr(verbose))\n"
    ]
   },
   {
