--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a subset of Wikidata\n",
+    "# Partitioning a subset of Wikidata\n",
     "\n",
     "This notebook illustrates how to partition a Wikidata KGTK edges file.\n",
     "\n",
