Update the documentation regarding node2;wikidatatype.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -44,8 +44,10 @@
     "```\n",
     "Here are some contraints on the contents of the input file:\n",
     "- The input file starts with a KGTK header record.\n",
-    "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file is expected contain the `node2;wikidatatype` column.\n",
+    "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file may contain the `node2;wikidatatype` column.\n",
     "  - The `node2;wikidatatype` column is used to partition claims by Wikidata property datatype.\n",
+    "  - If it does not exist, it will be created during the partitioning process and populated using `datatype` relationships.\n",
+    "  - If it does exist, any empty values in the column will be populated using `datatype` relationships.\n",
     "- The `id` column must contain a nonempty value.\n",
     "- The first section of an `id` value must be the `node` value for the record.\n",
     "  - The qualifier extraction operations depend upon this constraint. \n",
