Give the proper name for kgtk_options in the documentation.  Set the proper default for presorted. Quote the node;wikidatatype column name in the lift ocmmand.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -76,7 +76,7 @@
     "| `temp_folder_path` |    A folder that may be used for temporary files. | wikidata_parts_path + '/temp' |\n",
     "| `gzip_command` |        The compression command for sorting. | 'pigz' |\n",
     "| `kgtk_command` |        The kgtk commmand. | 'time kgtk' |\n",
-    "| `kgtk_command` |        The kgtk commmand options. | '--debug --timing' |\n",
+    "| `kgtk_options` |        The kgtk commmand options. | '--debug --timing' |\n",
     "| `kgtk_extension` |      The file extension for generated KGTK files. Appending `.gz` implies gzip compression. | 'tsv.gz' |\n",
     "| `presorted` |           When True, the input file is already sorted. | 'False' |\n",
     "| `sort_extras` |         Extra parameters for the sort program.  The default specifies a path for temporary files. Other useful parameters include '--buffer-size' and '--parallel'. | '--parallel 24 --buffer-size 30% --temporary-directory ' + temp_folder_path |\n",
@@ -102,7 +102,7 @@
     "kgtk_command =        'time kgtk'\n",
     "kgtk_options =        '--debug --timing'\n",
     "kgtk_extension =      'tsv.gz'\n",
-    "presorted =           'True'\n",
+    "presorted =           'False'\n",
     "sort_extras =         '--parallel 24 --buffer-size 30% --temporary-directory ' + temp_folder_path\n",
     "use_mgzip =           'True'\n",
     "verbose =             'True'\n"
@@ -298,7 +298,7 @@
     " --label-file {wikidata_parts_path}/metadata.property.datatypes.{kgtk_extension}\\\n",
     " --label-value datatype \\\n",
     " --output-file {wikidata_parts_path}/claims.{kgtk_extension}\\\n",
-    " --columns-to-write node2;wikidatatype"
+    " --columns-to-write 'node2;wikidatatype'"
    ]
   },
   {
