Improve the documentation frames.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -54,13 +54,16 @@
     "- In addition to the claims and qualifiers, the input file is expected to contain:\n",
     "  - English language labels for all property entities appearing in the file.\n",
     "- The input file ought to contain the following:\n",
+    "  - claims records,\n",
+    "  - qualifier records,\n",
     "  - alias records in appropriate languages,\n",
     "  - description records in appropriate languages,\n",
     "  - label records in appropriate languages, and\n",
     "  - sitelink records in appropriate languages.\n",
-    "- Additionally, this script provides for the appearance of `datatype` and `type` records.\n",
-    "  - `datatype` records map Wikidata property entities to Wikidata property datatypes. These records may provide an alternative to the `node2;wikidatatype` column in the future.\n",
-    "  - `type` records list all `entityId` values and identify them as properties or items. These records provides a correctness check on the operation of `kgtk import-wikidata`, and may be deprecated in the future. "
+    "  - `datatype` records that map Wikidata property entities to Wikidata property datatypes. These records are required if the input file does not contain the `node2;wikidatatype` column.\n",
+    "- Additionally, this script provides for the appearance of `type` records in the input file.\n",
+    "  - `type` records that list all `entityId` values and identify them as properties or items. These records provides a correctness check on the operation of `kgtk import-wikidata`, and may be deprecated in the future.\n",
+    "- The input file is assumed to be unsorted. If it is already sorted on the (`id` `node1` `label` `node2`) columns , then set the `presorted` parameter to `True` to shorten the execution time of this script."
    ]
   },
   {
@@ -78,7 +81,7 @@
     "| `kgtk_command` |        The kgtk commmand. | 'time kgtk' |\n",
     "| `kgtk_options` |        The kgtk commmand options. | '--debug --timing' |\n",
     "| `kgtk_extension` |      The file extension for generated KGTK files. Appending `.gz` implies gzip compression. | 'tsv.gz' |\n",
-    "| `presorted` |           When True, the input file is already sorted. | 'False' |\n",
+    "| `presorted` |           When True, the input file is already sorted on the (`id` `node1` `label` `node2`) columns. | 'False' |\n",
     "| `sort_extras` |         Extra parameters for the sort program.  The default specifies a path for temporary files. Other useful parameters include '--buffer-size' and '--parallel'. | '--parallel 24 --buffer-size 30% --temporary-directory ' + temp_folder_path |\n",
     "| `use_mgzip` |           When True, use the mgzip program where appropriate for faster compression. | 'True' |\n",
     "| `verbose` |             When True, produce additional feedback messages. | 'True' |\n"
