filled in step 6 of KGTK tutorial with a call to partition-wikidata notebook. Note these new cells depends on a new environment variable that is set up towards the top of the notebook

--- a/examples/KGTK Turorial.ipynb
+++ b/examples/KGTK Turorial.ipynb
@@ -136,10 +136,12 @@
     "os.environ['kgtk'] = kgtk\n",
     "os.environ['kypher'] = \"time kgtk --debug query --graph-cache \" + os.environ['STORE']\n",
     "os.environ['kypher'] = \"time kgtk query --graph-cache \" + os.environ['STORE']\n",
-    "\n",
-    "\n",
     "kgtk_environment_variables.append('kgtk')\n",
     "kgtk_environment_variables.append('kypher')\n",
+    "\n",
+    "# We'll save the current working directory so we can call into other example notebooks later\n",
+    "os.environ[\"EXAMPLES_DIR\"] = os.getcwd()\n",
+    "kgtk_environment_variables.append('EXAMPLES_DIR')\n",
     "\n",
     "kgtk_environment_variables.sort()\n",
     "for variable in kgtk_environment_variables:\n",
@@ -2075,18 +2077,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We'll use the partition-wikidata notebook to complete this step. This notebook expects an input file that includes all edges and qualifiers together. We also need to specify a directory where partitioned files should be created, and a directory where temporary files can be sent (this should be different from our temp directory as the partition notebook will clear any existing files in this folder)."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mkdir $OUT/parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!$kgtk cat -i $OUT/all.tsv.gz -i $OUT/qualifiers.tsv.gz -o $TEMP/all_and_qualifiers.tsv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!papermill $EXAMPLES_DIR/partition-wikidata.ipynb $TEMP/partition-wikidata.out.ipynb \\\n",
+    "-p wikidata_input_path $TEMP/all_and_qualifiers.tsv.gz \\\n",
+    "-p wikidata_parts_path $OUT/parts \\\n",
+    "-p temp_folder_path $OUT/parts/temp \\\n",
+    "-p sort_extras \"--buffer-size 30% --temporary-directory $OUT/parts/temp\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The partition-wikidata notebook created the following partitioned kgtk-files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aliases.en.tsv.gz                   metadata.property.datatypes.tsv.gz\r\n",
+      "aliases.tsv.gz                      metadata.types.tsv.gz\r\n",
+      "all.tsv.gz                          qualifiers.commonsMedia.tsv.gz\r\n",
+      "claims.commonsMedia.tsv.gz          qualifiers.external-id.tsv.gz\r\n",
+      "claims.external-id.tsv.gz           qualifiers.geo-shape.tsv.gz\r\n",
+      "claims.geo-shape.tsv.gz             qualifiers.globe-coordinate.tsv.gz\r\n",
+      "claims.globe-coordinate.tsv.gz      qualifiers.math.tsv.gz\r\n",
+      "claims.math.tsv.gz                  qualifiers.monolingualtext.tsv.gz\r\n",
+      "claims.monolingualtext.tsv.gz       qualifiers.musical-notation.tsv.gz\r\n",
+      "claims.musical-notation.tsv.gz      qualifiers.quantity.tsv.gz\r\n",
+      "claims.other.tsv.gz                 qualifiers.string.tsv.gz\r\n",
+      "claims.quantity.tsv.gz              qualifiers.tabular-data.tsv.gz\r\n",
+      "claims.string.tsv.gz                qualifiers.time.tsv.gz\r\n",
+      "claims.tabular-data.tsv.gz          qualifiers.tsv.gz\r\n",
+      "claims.time.tsv.gz                  qualifiers.url.tsv.gz\r\n",
+      "claims.tsv.gz                       qualifiers.wikibase-form.tsv.gz\r\n",
+      "claims.url.tsv.gz                   qualifiers.wikibase-item.tsv.gz\r\n",
+      "claims.wikibase-form.tsv.gz         qualifiers.wikibase-lexeme.tsv.gz\r\n",
+      "claims.wikibase-item.tsv.gz         qualifiers.wikibase-property.tsv.gz\r\n",
+      "claims.wikibase-lexeme.tsv.gz       qualifiers.wikibase-sense.tsv.gz\r\n",
+      "claims.wikibase-property.tsv.gz     sitelinks.en.tsv.gz\r\n",
+      "claims.wikibase-sense.tsv.gz        sitelinks.qualifiers.en.tsv.gz\r\n",
+      "descriptions.en.tsv.gz              sitelinks.qualifiers.tsv.gz\r\n",
+      "descriptions.tsv.gz                 sitelinks.tsv.gz\r\n",
+      "labels.en.tsv.gz                    \u001b[34mtemp\u001b[m\u001b[m\r\n",
+      "labels.tsv.gz\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls $OUT/parts"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3080,9 +3155,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk",
+   "display_name": "Python [conda env:kgtk-env] *",
    "language": "python",
-   "name": "kgtk"
+   "name": "conda-env-kgtk-env-py"
   },
   "language_info": {
    "codemirror_mode": {
