Update notebook for output files to have wikidata style id

--- a/examples/abbreviate_human_labels.ipynb
+++ b/examples/abbreviate_human_labels.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Example command to run the notebook using papermill:\n",
     "\n",
-    "```papermill abbreviate_human_labels.ipynb abbr_output.ipynb -p data_folder /Users/rijulvohra/Documents/work/Novartis-ISI/global_data_folder/KGTK_issue260_data/data_folder_1 \\\n",
+    "```papermill abbreviate_human_labels.ipynb abbr_output.ipynb -p data_folder /Users/rijulvohra/Documents/work/Novartis-ISI/global_data_folder/kgtk_edge_files \\\n",
     "                                                          -p wikidata_item_filename claims.wikibase-item.tsv.gz \\\n",
     "                                                          -p wikidata_label_filename labels.en.tsv.gz \\\n",
     "                                                          -p wikidata_alias_filename aliases.en.tsv.gz```"
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "data_folder = '/Users/rijulvohra/Documents/work/Novartis-ISI/global_data_folder/KGTK_issue260_data/data_folder_1'\n",
+    "data_folder = '/Users/rijulvohra/Documents/work/Novartis-ISI/global_data_folder/kgtk_edge_files'\n",
     "wikidata_item_filename = 'claims.wikibase-item.tsv.gz'\n",
     "wikidata_label_filename = 'labels.en.tsv.gz'\n",
     "wikidata_alias_filename = 'aliases.en.tsv.gz'"
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kgtk add-id -i $abbr_kgtk_file --id-style node1-label-num -o $final_abbr_kgtk_file"
+    "!kgtk add-id -i $abbr_kgtk_file --id-style wikidata --overwrite-id True -o $final_abbr_kgtk_file"
    ]
   },
   {
