--- a/examples/generate_wikitable_anchors.ipynb
+++ b/examples/generate_wikitable_anchors.ipynb
@@ -67,8 +67,9 @@
     "wikitable_corpus_dir = os.path.join(file_dir, 'step_1')\n",
     "sitelinks_file = os.path.join(kgtk_files_dir, sitelinks_filename)\n",
     "temp_wiki_anchor = os.path.join(kgtk_files_dir, 'augmentation.wikipedia.tables.anchors.meta.tsv.gz')\n",
-    "output_wikitable_anchor = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.temp2.tsv.gz')\n",
-    "sorted_wikitable_anchor = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.sorted2.tsv')\n",
+    "output_wikitable_anchor = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.temp3.tsv.gz')\n",
+    "sorted_wikitable_anchor = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.sorted3.tsv')\n",
+    "unique_anchor_edges = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.unique.tsv')\n",
     "final_output = os.path.join(kgtk_files_dir,'augmentation.wikipedia.tables.anchors.tsv')"
    ]
   },
@@ -105,7 +106,8 @@
     "                            for link in anc['links']:\n",
     "                                href = 'http://en.wikipedia.org' + link['href']\n",
     "                                anchor_text = val[int(link['start']):int(link['end'])]\n",
-    "                                lines_to_write.append(href + '\\t' + 'wikipedia_table_anchor' + '\\t' + \"\\'\" + anchor_text + \"\\'\" + '@en')\n",
+    "                                if len(anchor_text.strip()) > 0:\n",
+    "                                    lines_to_write.append(href + '\\t' + 'wikipedia_table_anchor' + '\\t' + \"\\'\" + anchor_text + \"\\'\" + '@en')\n",
     "\n",
     "                if len(lines_to_write) > 100000:\n",
     "                     with gzip.open(temp_file,'a') as writer:\n",
@@ -575,7 +577,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uniq $sorted_wikitable_anchor > $final_output"
+    "!uniq $sorted_wikitable_anchor > $unique_anchor_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk add-id -i $unique_anchor_edges --id-style wikidata --overwrite True -o $final_output"
    ]
   },
   {
@@ -743,7 +754,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "os.remove(sorted_wikitable_anchor)"
+    "os.remove(sorted_wikitable_anchor)\n",
+    "os.remove(unique_anchor_edges)"
    ]
   }
  ],
