KG Profiler one bug

--- a/use-cases/Knowledge_Graph_Profiler.ipynb
+++ b/use-cases/Knowledge_Graph_Profiler.ipynb
@@ -1106,7 +1106,7 @@
     "    \n",
     "    input_file = Property_type\n",
     "    input_file_qualifier = Property_type+\"_qualifiers\"\n",
-    "    if os.path.exists(os.path.join(os.getenv(\"WIKIDATA_PARTS\"),os.getenv(input_file))):\n",
+    "    if os.path.exists(os.path.join(os.getenv(\"WIKIDATA_PARTS\"),os.getenv(input_file_qualifier))):\n",
     "        output_file_for_qualifiers_raw = \"Property_overview.number_of_qualifiers.\"+Property_label+\".raw.tsv\";\n",
     "        df_temp_qual = run_command_return_df(cmd,raw_folder,output_file_for_qualifiers_raw,{\"__output_file\":output_file_for_qualifiers_raw,\"__prop\":Current_Pnode,\"__folder\":raw_folder,\"__input_file_prop\":input_file,\"__input_file_qualifiers\":input_file_qualifier},_save,_restart)\n",
     "        Number_of_qualifiers = df_temp_qual.loc[0][\"Number_of_Qualifiers\"]\n",
@@ -11854,7 +11854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -11883,7 +11883,7 @@
     }
    ],
    "source": [
-    "#property_distribution_with_class_items(\"P176\",\"manufacturer\",outgoing_classes=[\"pharmaceutical company\"],start=0,end=15)"
+    "#property_distribution_with_class_items(\"P176\",\"manufacturer\",outgoing_classes=[\"pharmaceutical company\"],start=0,end=16)"
    ]
   },
   {
