add pre tutorial steps

--- a/tutorial/1 Introduction.ipynb
+++ b/tutorial/1 Introduction.ipynb
@@ -12,6 +12,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steps to complete before the tutorial\n",
+    "\n",
+    "- [Create a conda virtual environment with python 3.7](https://github.com/usc-isi-i2/kgtk#local-installation), lets call it `kgtk-env`\n",
+    "- Activate the conda environment: `conda activate kgtk-env`\n",
+    "- Install the following python packages, `pip install altair gensim papermill`\n",
+    "- Link the conda environment to Jupyter Lab,\n",
+    "  `python -m ipykernel install --user --name=kgtk-env`\n",
+    "\n",
+    "We recommend using `Jupyterlab` for this tutorial with conda virtual environment using `python 3.7`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -946,9 +961,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk_env",
+   "display_name": "kgtk-env",
    "language": "python",
-   "name": "kgtk_env"
+   "name": "kgtk-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -960,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
