more python libraries

--- a/tutorial/1 Introduction.ipynb
+++ b/tutorial/1 Introduction.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "- [Create a conda virtual environment with python 3.7](https://github.com/usc-isi-i2/kgtk#local-installation), lets call it `kgtk-env`\n",
     "- Activate the conda environment: `conda activate kgtk-env`\n",
-    "- Install the following python packages, `pip install altair gensim papermill`\n",
+    "- Install the following python packages, `pip install altair gensim papermill ipywidgets iprogress`\n",
     "- Link the conda environment to Jupyter Lab,\n",
     "  `python -m ipykernel install --user --name=kgtk-env`\n",
     "\n",
